# OpenGL_lessons

./: CMakeLists.txt  InitOpenGL.cpp  README.md  Triangle.cpp  home.cpp  k.cpp  linuxCompileCommand.txt
glfw/: CMakeLists.txt  cmake_uninstall.cmake
glfw/examples/: CMakeCache.txt
glfw/src/: glfw3.pc  glfw_config.h  glfw_config.h.in
